# Weitzman-Approximator

./: .gitignore  Diversity Indicators.py  README.md  auxiliar.py  main.py  nearest_neighbour.py  plot_distributions.py  pyproject.toml  weitzman_brute_evaluator.py  weitzman_depth_first_search.py
PFAs_Concave/: Concave_3D_105_0.50.POF  Concave_3D_105_0.80.POF  Concave_3D_105_1.00.POF
PFAs_Convex/: Convex_3D_105_0.50.POF  Convex_3D_105_0.60.POF  Convex_3D_105_0.70.POF  Convex_3D_105_1.00.POF
PFAs_Linear/: Linear_3D_105_0.50.POF  Linear_3D_105_0.70.POF  Linear_3D_105_0.90.POF
Small_Linear_Lattices/: Linear_3D_004_1.00.txt  Linear_3D_005_1.00.txt  Linear_3D_006_1.00.txt  Linear_3D_007_1.00.txt  Linear_3D_008_1.00.txt  Linear_3D_009_1.00.txt  Linear_3D_010_1.00.txt  Linear_3D_011_1.00.txt  Linear_3D_012_1.00.txt
configs/: README.txt  debug.yaml  experiment.yaml
experiments/: aggregate_results.py  compute_kendall_tau.py  plot_results.py  run_batch.py  run_brute_force.py  run_exact_solver.py  run_heuristics.py
scripts/: README.md  brute_evaluator.py  heuristic.py  plot_all.py  plot_curves.py
src/weitzman/: README.md
src/weitzman/algorithms/: christofides.py  christofidesv2.py  nearest_neighbour.py  twice_around.py
weitzman/algorithms/: __init__.py  brute_force.py  christofides.py  farthest_neighbour.py  global_max_min.py  twice_around.py
weitzman/io/: loaders.py  writers.py
weitzman/metrics/: bb_solver.py  pure_diversity.py  weitzman.py
weitzman/plotting/: boxplot.py  trendlines.py
weitzman/utils/: logging_utils.py  operations.py  run_context.py
(+482 files in other folders)
