[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "weitzman"
version = "1.0.0"
requires-python = ">=3.10"
description = "Heuristics for the Weitzman diversity index on Pareto fronts."
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "tqdm>=4.64",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["weitzman*"]
